[gd_scene load_steps=4 format=2]

[ext_resource path="res://GridContainer.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/UbuntuMono_Nerd_Font_Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = SubResource( 1 )

[node name="Main" type="Node2D"]

[node name="HSplitContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1025.0
margin_bottom = 604.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_right = 254.0
margin_bottom = 604.0
script = ExtResource( 1 )

[node name="ColorSelection" type="GridContainer" parent="HSplitContainer/VBoxContainer"]
margin_right = 254.0
margin_bottom = 152.0
columns = 2

[node name="LabelRed" type="Label" parent="HSplitContainer/VBoxContainer/ColorSelection"]
margin_top = 5.0
margin_right = 96.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "Rouge : "

[node name="InputRed" type="LineEdit" parent="HSplitContainer/VBoxContainer/ColorSelection"]
margin_left = 100.0
margin_right = 254.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( -5.83508, -4.01366 )
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelGreen" type="Label" parent="HSplitContainer/VBoxContainer/ColorSelection"]
margin_top = 44.0
margin_right = 96.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 2 )
text = "Vert : "

[node name="InputGreen" type="LineEdit" parent="HSplitContainer/VBoxContainer/ColorSelection"]
margin_left = 100.0
margin_top = 39.0
margin_right = 254.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( -4.7126, -4.01369 )
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelBlue" type="Label" parent="HSplitContainer/VBoxContainer/ColorSelection"]
margin_top = 83.0
margin_right = 96.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 2 )
text = "Bleu : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputBlue" type="LineEdit" parent="HSplitContainer/VBoxContainer/ColorSelection"]
margin_left = 100.0
margin_top = 78.0
margin_right = 254.0
margin_bottom = 113.0
rect_pivot_offset = Vector2( -4.71265, -6.25859 )
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelBlack" type="Label" parent="HSplitContainer/VBoxContainer/ColorSelection"]
margin_top = 122.0
margin_right = 96.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 2 )
text = "Noir : "

[node name="InputBlack" type="LineEdit" parent="HSplitContainer/VBoxContainer/ColorSelection"]
margin_left = 100.0
margin_top = 117.0
margin_right = 254.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 2 )

[node name="Separator" type="Label" parent="HSplitContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 254.0
margin_bottom = 181.0
custom_fonts/font = SubResource( 2 )

[node name="ResultatLabel" type="Label" parent="HSplitContainer/VBoxContainer"]
margin_top = 185.0
margin_right = 254.0
margin_bottom = 210.0
custom_fonts/font = SubResource( 2 )
text = "RÃ©sultat :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorContainer" type="PanelContainer" parent="HSplitContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 254.0
margin_bottom = 468.0
rect_min_size = Vector2( 254, 254 )

[node name="Color" type="ColorRect" parent="HSplitContainer/VBoxContainer/ColorContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 247.0
margin_bottom = 247.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HSplitContainer/VBoxContainer"]
margin_top = 472.0
margin_right = 254.0
margin_bottom = 503.0
custom_fonts/font = SubResource( 2 )
text = "Calcule"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="Label" parent="HSplitContainer"]
margin_left = 258.0
margin_top = 289.0
margin_right = 606.0
margin_bottom = 314.0
custom_fonts/font = SubResource( 2 )
text = "                             "

[node name="ColorsPreset" type="GridContainer" parent="HSplitContainer"]
margin_left = 610.0
margin_right = 1120.0
margin_bottom = 604.0
size_flags_horizontal = 3
columns = 2

[node name="LabelFuchsia" type="Label" parent="HSplitContainer/ColorsPreset"]
margin_top = 28.0
margin_right = 180.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 2 )
text = "Fuchsia"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelFuchsia" type="PanelContainer" parent="HSplitContainer/ColorsPreset"]
margin_left = 184.0
margin_right = 510.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Color" type="ColorRect" parent="HSplitContainer/ColorsPreset/PanelFuchsia"]
margin_left = 7.0
margin_top = 7.0
margin_right = 319.0
margin_bottom = 75.0
color = Color( 0.992157, 0.247059, 0.572549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelGold" type="Label" parent="HSplitContainer/ColorsPreset"]
margin_top = 114.0
margin_right = 180.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 2 )
text = "Or"

[node name="PanelGold" type="PanelContainer" parent="HSplitContainer/ColorsPreset"]
margin_left = 184.0
margin_top = 86.0
margin_right = 510.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Color" type="ColorRect" parent="HSplitContainer/ColorsPreset/PanelGold"]
margin_left = 7.0
margin_top = 7.0
margin_right = 319.0
margin_bottom = 75.0
color = Color( 1, 0.647059, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMagenta" type="Label" parent="HSplitContainer/ColorsPreset"]
margin_top = 200.0
margin_right = 180.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 2 )
text = "Azur"

[node name="PanelMagenta" type="PanelContainer" parent="HSplitContainer/ColorsPreset"]
margin_left = 184.0
margin_top = 172.0
margin_right = 510.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Color" type="ColorRect" parent="HSplitContainer/ColorsPreset/PanelMagenta"]
margin_left = 7.0
margin_top = 7.0
margin_right = 319.0
margin_bottom = 75.0
color = Color( 0.117647, 0.498039, 0.796078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelYellow" type="Label" parent="HSplitContainer/ColorsPreset"]
margin_top = 286.0
margin_right = 180.0
margin_bottom = 311.0
custom_fonts/font = SubResource( 2 )
text = "Jaune"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelYellow" type="PanelContainer" parent="HSplitContainer/ColorsPreset"]
margin_left = 184.0
margin_top = 258.0
margin_right = 510.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Color" type="ColorRect" parent="HSplitContainer/ColorsPreset/PanelYellow"]
margin_left = 7.0
margin_top = 7.0
margin_right = 319.0
margin_bottom = 75.0
color = Color( 1, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelArgile" type="Label" parent="HSplitContainer/ColorsPreset"]
margin_top = 372.0
margin_right = 180.0
margin_bottom = 397.0
custom_fonts/font = SubResource( 2 )
text = "Argile"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelArgile" type="PanelContainer" parent="HSplitContainer/ColorsPreset"]
margin_left = 184.0
margin_top = 344.0
margin_right = 510.0
margin_bottom = 426.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Color" type="ColorRect" parent="HSplitContainer/ColorsPreset/PanelArgile"]
margin_left = 7.0
margin_top = 7.0
margin_right = 319.0
margin_bottom = 75.0
color = Color( 0.937255, 0.937255, 0.937255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelIndigo" type="Label" parent="HSplitContainer/ColorsPreset"]
margin_top = 458.0
margin_right = 180.0
margin_bottom = 483.0
custom_fonts/font = SubResource( 2 )
text = "Indigo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelIndigo" type="PanelContainer" parent="HSplitContainer/ColorsPreset"]
margin_left = 184.0
margin_top = 430.0
margin_right = 510.0
margin_bottom = 512.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Color" type="ColorRect" parent="HSplitContainer/ColorsPreset/PanelIndigo"]
margin_left = 7.0
margin_top = 7.0
margin_right = 319.0
margin_bottom = 75.0
color = Color( 0.47451, 0.109804, 0.972549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelBlack" type="Label" parent="HSplitContainer/ColorsPreset"]
margin_top = 544.0
margin_right = 180.0
margin_bottom = 569.0
custom_fonts/font = SubResource( 2 )
text = "Gris anthracite"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBlack" type="PanelContainer" parent="HSplitContainer/ColorsPreset"]
margin_left = 184.0
margin_top = 516.0
margin_right = 510.0
margin_bottom = 598.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Color" type="ColorRect" parent="HSplitContainer/ColorsPreset/PanelBlack"]
margin_left = 7.0
margin_top = 7.0
margin_right = 319.0
margin_bottom = 75.0
color = Color( 0.188235, 0.188235, 0.188235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HSplitContainer/VBoxContainer/Button" to="HSplitContainer/VBoxContainer" method="_on_Button_pressed"]
